index.css
/* COLOR VARIABLES */
:root {
	--col1: #9D00FF;
	--col2: #0F0F0F;
	--col3: #DFDFDF;
	--col4: #7D00FF;
	--col5: #FF006E;
	--col6: #5BCEFA;
	--col7: #F5A9B8;
	--col8: #DFDFDF; 
}

html {
	color: var(--col3);
	background-color: var(--col2);
	font-family: 'Josefin Sans', sans-serif;
	cursor: none;
	background-image: repeating-radial-gradient(circle at 17% 32%, rgba(40,40,40,0.5), rgba(0,0,0,0.5) 0.00085px);
	animation: back 10s linear infinite;
	animation-direction: alternate;
  }

  #opacity_filter {
	background-image: repeating-radial-gradient(circle at 17% 32%, rgba(40,40,40,0.3), rgba(0,0,0,0.32) 0.00085px);
	animation: back 10s linear infinite;
	animation-direction: alternate;

  }
  
  @keyframes back {
	from {
	  background-size: 50% 50%;
	}
	to {
	  background-size: 25% 25%;
	}
  }

html::-webkit-scrollbar, body::-webkit-scrollbar {
    width: 0;
    height: 0;
}

html, body {
	padding: 0;
	margin: 0;
	overflow-x: hidden;
    overflow-y: scroll;
    scrollbar-width: none;
    -ms-overflow-style: none;
}

section {
	position: relative;
	margin-top: 10vh;
}

.landing {
	display: flex;
	justify-content: center;
	align-items: center;
	min-height: 100vh;
	flex-direction: column;
	margin-top: 0;
}

#scroll_nav {
	position: fixed;
	width: 2em;
	height: 20em;
	display: flex;
	align-items: center;
	flex-direction: column;
	top: 50%;
	left: 1em;
	transform: translate(0, -50%);
	z-index: 30;
}

.scroll_bar {
	position: absolute;
	border: 1px solid var(--col1);
	width: 0;
	height: 20em;
}

.scroll_circle {
	border-radius: 2em;
	position: absolute;
	top: -0.5em;
	width: 1em;
	height: 1em;
	border: 2px solid var(--col1);
	background-color: var(--col2);
}

#time {
	font-family: 'Roboto Mono', monospace;
	font-weight: bold;
	font-size: 1.5vw;
	display: inline-block;
}

.text1 {
	text-shadow: var(--col4) 12px 10px;
	font-size: 10vw;
	max-width: 90%;
	padding-left: 20px;
	padding-right: 20px;
}

.text2 {
	font-family: 'Roboto Mono', monospace;
	color: var(--col1);
	padding-left: 40px;
}

.text_container {
	overflow: hidden;
}

#cursor {
	border: 1px rgba(223,223,223,1) solid;
	border-radius: 2.5em;
	height: 2.5em;
	width: 2.5em;
	position: fixed;
	top: -100px;
	left: -100px;
	z-index: 100;
	transform: translate(-50%,-50%);
	pointer-events: none;
	animation-duration: 0.2s;
}

.cursor_expand { animation-name: expand1; animation-fill-mode: forwards; }
.cursor_shrink { animation-name: shrink1; animation-fill-mode: forwards; }

@keyframes shrink1 {
	from {background-color: rgba(223, 223, 223, 0.3); width: 4em; height: 4em; border: 1px rgba(223,223,223,1) solid;}
	to {background-color: rgba(223,223,223,0); width: 2.5em; height: 2.5em; border: 1px rgba(223,223,223,1) solid;}
}
@keyframes expand1 {
	from {background-color: rgba(223,223,223,0); width: 2.5em; height: 2.5em; border: none;}
	to {background-color: rgba(223, 223, 223, 0.3); width: 4em; height: 4em; border: none;}
}

.ml16{
  overflow: hidden;
}

.ml16 .letter {
  display: inline-block;
  line-height: 1em;
}

.text2 {
	width: fit-content;
	overflow: hidden;
	display: inline-block;
}

#abt {
	margin-left: auto;
}

nav {
	display: inline-flex;
	justify-content: center;
	align-items: center;
	overflow: hidden;
	position: absolute;
	top: 1em;
	left: 1em;
	right: 1em;
	overflow: visible;
}

nav a {
	display: inline-block;
	padding: 10px;
	margin: 0;
	text-decoration: none;
	color: var(--col3);
	font-size: 2vw;
	font-family: 'Roboto Mono', monospace;
	cursor: none;
}

nav a:after {
	display: block;
	content: '';
	border-bottom: solid 3px var(--col1);
	transform: scaleX(0);
	transition: transform 250ms ease-in-out;
}

nav a:hover {
	background-color: #000000;
	color: var(--col1);
}

nav a:hover:after { transform: scaleX(1);}

.scroll, .mail {
	position: absolute;
	bottom: 0;
	right: 0;
	padding: 10px;
	margin: 1em;
	font-family: 'Roboto Mono', monospace;
}

.mail {
	left: 0;
	margin-left: 3.5em;
}

.mail a {
	color: var(--col3);
}

.mail a:hover {
	cursor: none;
	color: var(--col1);
}

#page1, #page2, #page3 {
	background-color: #0A0A0A;
	position: fixed;
	width: 100vw;
	height: 80vh;
	bottom: -80vh;
	font-family: 'Roboto Mono', monospace;
	z-index: 31;
}

.page_text {
	border-top: 1px solid var(--col3);
	padding: 10px;
	margin: 2.5em;
}

.page_text h1 {
	margin-top: 0;
}

.stop_scrolling {
	height: 100vh;
	overflow: hidden;
}

.sect1 {
	font-family: 'Roboto Mono', monospace;
	font-size: 2.25vw;
	width: 100%;
	padding-bottom: 20px;
	display: inline-flex;
}

#test1 {
	margin-left: 3em;
	margin-right: 3em;
	padding-bottom: 1em;
	width: 100%;
	border-bottom: 3px solid;
}

h1 {
	font-size: 2.75vw;
	font-weight: normal;
}

u {
	font-weight: bold;
	color: var(--col1);
}

.sect2 {
	display: flex;
	min-height: 100vh;
	flex-direction: column;
	font-family: 'Roboto Mono', monospace;
}

.sect2 h1 {
	font-size: 5vw;
	margin-right: 1.5em;
	margin-left: auto;
	display: flex;
	flex-direction: column;
}

.sect2 h1 span {
	font-size: 2.25vw;
	margin-right: 0;
	margin-left: auto;
	margin-top: 0.5em;
}

.sect3 {
	display: flex;
	flex-direction: column;
	min-height: 80vh;
}

.sect3_text, .sect3_email, .sect3_arrow {
	font-family: 'Roboto Mono', monospace;
	font-size: 5vw;
	display: inline-flex;
	margin-left: 1.5em;
	padding-bottom: 1em;
}

.sect3_email {
	color: var(--col1);
	margin-right: 1.5em;
	align-self: flex-end;
	width: fit-content;
	height: 1em;
	line-height: 1em;
	padding: 0.5em;
	display: inline-block;
	text-decoration: none;
	cursor: none;
	white-space: nowrap;
}

.sect3_email:after {
	display: block;
	content: '';
	border-bottom: solid 3px var(--col1);
	transform: scaleX(0);
	transition: transform 250ms ease-in-out;
}

.sect3_email:hover {
	background-color: #000000;
	color: var(--col1);
	cursor: none;
}

.sect3_email:hover:after { transform: scaleX(1);}

.sect3_arrow {
	border-left: 3px solid;
	border-bottom: 3px solid;
	width: 100%;
	height: 50%;
	margin-left: 3em;
}

.sect3_container {
	width: 100%;
	display: inline-flex;
	justify-content: space-between;
}


.right_container {
	width: 40%;
	height: fit-content;
	display: flex;
	flex-direction: column;
	text-align: center;
	float: right;
}

#time, .mail a {
	text-shadow: var(--col1) 1px 1px 2px;
}

.color_bar {
	height: 1em;
	font-size: 1vw;
  display: inline-block;
}

.c1 {background-color: #9D00ff; margin-left: 40px;}
.c2 {background-color: #FF006E;}
.c3 {background-color: #5BCEFA;}
.c4 {background-color: #F5A9B8;}
.c5 {background-color: #DFDFDF;}


@media only screen and (orientation: portrait) {

	.color_bar {
		display: none;
	}

	#time {
		display: none;
	}

	nav a {
		margin: auto;
		font-size: 2vh;
	}

	.sect1 {
		font-size: 2vh;
	}

	h1 {
		font-size: 2.75vh;
	}

	#test1_change {
		font-size: 2vh; 
	}
}

@media only screen and (max-width: 450px) {

	#scroll_nav {
		display: none;
	}
	
	.mail {
		display: none;
	}

	.sect1 {
		flex-direction: column;
	}

	#test1 {
		margin-right: 1em;
		margin-left: 1em;
		width: auto;
	}

	.right_container {
		margin-left: 1em;
		margin-right: 1em;
		margin-top: 3em;
		width: auto;
	}
}

ul.cloud {
	list-style: none;
	padding-left: 0;
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;
	line-height: 2.5rem;
  }

ul.cloud a {
	color: var(--col1);
	display: block;
	padding: 0.3em;
	text-decoration: none;
	position: relative;
	border-radius: 0.25em;
	--size: 4;
	font-size: calc(var(--size) * 0.2em + 0.5em);
  opacity: calc((15 - (9 - var(--size))) / 20); 
  }

  ul.cloud a:hover {
	background-color: black;
  }

  #opacity_filter {
	position: fixed;
	width: 100vw;
	height: 45vh;
	bottom: 0;
	background-color: rgba(15,15,15,0.5);
	pointer-events: none;
	z-index: 0;
  }

  #test1_change {
	z-index: -1;
	position: relative;
  }

